syntax = "proto3";

package user.service.v1;

import "buf/validate/validate.proto";
import "errors/errors.proto";

option java_multiple_files = true;
option java_outer_classname = "UserProtoV1";
option java_package = "dev.krathub.api.user.v1";

// 错误码定义
enum ErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;
  // 用户未找到
  USER_NOT_FOUND = 0 [(errors.code) = 404];
  // 删除用户失败
  DELETE_USER_FAILED = 1 [(errors.code) = 500];
  // 更新用户信息失败
  UPDATE_USER_FAILED = 2 [(errors.code) = 500];
  // 保存用户信息失败
  SAVE_USER_FAILED = 3 [(errors.code) = 500];
}

// User gRPC 服务 - 纯 gRPC 接口
service UserService {
  rpc CurrentUserInfo(CurrentUserInfoRequest) returns (CurrentUserInfoResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc SaveUser(SaveUserRequest) returns (SaveUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message CurrentUserInfoRequest {}

message CurrentUserInfoResponse {
  int64 id = 1;
  string name = 2;
  string role = 3;
}

message DeleteUserRequest {
  int64 id = 1 [(buf.validate.field).int64.gt = 0]; // 用户ID必须大于0
}

message DeleteUserResponse {
  bool success = 1; // 删除是否成功
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string phone = 5;
  string avatar = 6;
  string bio = 7;
  string location = 8;
  string website = 9;
  string role = 10;
}

message UpdateUserResponse {
  string success = 1;
}

message SaveUserRequest {
  string name = 1 [(buf.validate.field).string.min_len = 5];
  string email = 2 [(buf.validate.field).string.email = true];
  string password = 3 [(buf.validate.field).string = {
    min_len: 5
    max_len: 10
  }];
  string phone = 4;
  string avatar = 5;
  string bio = 6;
  string location = 7;
  string website = 8;
  string role = 9;
}
message SaveUserResponse {
  string id = 1;
}
